# vtcombiner

./: CMakeLists.txt  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
contrib/htslibpp/: htslibpp_variant.h
contrib/htslibpp/test/: Makefile  vcf_header.cpp
m4/: libtool.m4
src/: Makefile.am  Makefile.in  log.h  main.cc
